# sp_task

install/: local_setup.sh  setup.sh
install/ballistic_solver/include/ballistic_solver/: ballistic_solver.hpp
install/ballistic_solver/lib/ballistic_solver/: solver_node
install/ballistic_solver/share/ballistic_solver/: local_setup.sh  package.sh  package.xml
install/fast_lio/lib/fast_lio/: fastlio_mapping  map_save
install/fast_lio/share/fast_lio/: local_setup.sh  package.sh
install/fast_lio/share/fast_lio/config/: mid360.yaml
install/fast_lio/share/fast_lio/rviz/: fastlio.rviz
install/livox_ros_driver2/lib/livox_ros_driver2/: livox_ros_driver2_node
install/livox_ros_driver2/share/livox_ros_driver2/: package.sh
install/livox_ros_driver2/share/livox_ros_driver2/config/: MID360_config.json
install/qos_debugger/lib/qos_debugger/: qos_debugger_node
install/qos_debugger/share/qos_debugger/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_msg/share/robot_msg/: local_setup.sh  package.sh  package.xml
install/small_gicp_relocalization/lib/small_gicp_relocalization/: relocalization_node
install/small_gicp_relocalization/share/small_gicp_relocalization/: package.dsv  package.ps1  package.sh  package.xml
install/small_gicp_relocalization/share/small_gicp_relocalization/cmake/: small_gicp_relocalizationConfig.cmake
install/small_gicp_relocalization/share/small_gicp_relocalization/config/: relocalization.yaml
log/: latest_build
rosbag/rosbag_mapping/: metadata.yaml
rosbag/rosbag_trimmed/: metadata.yaml
(+35 files in other folders)
